Reach four things a stock JDK was never asked for: new beans, new entities, removed members, inlined constants
The stock-JDK wall is that a loaded class cannot gain members and that companion members are invisible to reflection. Everything here is a case that does not touch that wall, and each was left undone only because nobody had looked.

A brand-new component class becomes a live bean. Component scanning runs once at startup, so a class created afterwards loaded fine and its bean simply never existed; but a fresh class is entirely real, so registering its definition is all that was missing. It lands in the context whose classloader defines it, goes through the full lifecycle with its constructor autowired, and a new controller's mappings are registered in the same breath. Two files dropped into a running application answered 200 on a new endpoint with the dependency wired. Finding this meant finding why it had been invisible: the agent's find-loaded-class helper answered "loaded" by loading the class itself, so every new-class path had been dead on arrival.

A brand-new @Entity is mapped, on a stock JDK, because Hibernate's reflection sees a fresh class completely. Two measured layers had to go first: ddl-auto was being read from "the unit that manages this entity", which for a new entity is nobody, and the unit's managed-class list is scanned once at startup so the rebuild reused it and produced a metamodel without the class. Now the setting comes from the unit about to be rebuilt and the class is added to the unit info before it runs. Several persistence units make it decline and name the ambiguity rather than guess.

A member a reload removes disappears from reflection. The JVM keeps it on the loaded class, so scans kept acting on it: a removed getter kept being serialised into responses. Removed names now join the hiding the injected members use, extended into the JDK's own filter maps with a union write past their once-per-class registration API, reached th